navbar z-index fix

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -75,6 +75,7 @@ li {
   width: $mainWidth;
   background-color: $color3;
   padding: 1rem;
+  z-index: 99;
 
   .active {}
 
